fix: update client, delete unused imports, some improvements